grid overflow fix

--- a/PathfindingVisualizer/src/components/layout/Header.css
+++ b/PathfindingVisualizer/src/components/layout/Header.css
@@ -3,7 +3,7 @@
     text-align: center;
     width: 100%;
     height:auto;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     position: sticky;
     top: 0;
 
