--- a/PathfindingVisualizer/src/index.css
+++ b/PathfindingVisualizer/src/index.css
@@ -1,4 +1,4 @@
-body {
+root {
  
   font-family: sans-serif;
   background-color: rgb(0, 0, 0);
@@ -8,7 +8,10 @@ body {
   margin: 0px;
   padding:0px;
   height: auto;
-  
+  width:100vw;
 
   
+}
+body{
+  background-color: rgb(0, 0, 0);
 }
